--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,15 @@
         <item>Programacion de servicios y procesos</item>
         <item>Acceso a datos</item>
         <item>Programacion multimedia</item>
+        <item>Sistema informaticos</item>
+        <item>Base de datos</item>
+        <item>Programacion</item>
+        <item>Lenguaje de marcas</item>
+        <item>Entornos de desarrollo</item>
+        <item>Formacion y Orientacion Laboral</item>
+        <item>Desarrollo de interfaces</item>
+        <item>Programacion de servicios y procesos</item>
+        <item>Acceso a datos</item>
+        <item>Programacion multimedia</item>
     </string-array>
 </resources>
